# cookiecutter-example

./: .gitignore  README.md  pyproject.toml
