[tool.poetry]
name = "cookiecutter-example"
version = "0.1.0"
description = "Example of a project generated with cookiecutter-template."
authors = ["Baptiste Pasquier <pasquierbaptiste@hotmail.fr>"]
readme = "README.md"
packages = [{include = "cookiecutter_example", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^23.12.2"
flake8-comprehensions = "^3.14.0"
flake8-simplify = "^0.21.0"
pep8-naming = "^0.13.3"
black = "^23.12.1"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poe.tasks]
init_dev = [
  { cmd = "poetry install --sync" },
  { cmd = "pre-commit install" },
]
torch_cuda = [
  { cmd = "poetry add numpy torch" },
  { cmd = "pip install torch --force-reinstall --extra-index-url https://download.pytorch.org/whl/cu117" },
]
